--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a{
     text-decoration: none;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6,span{
     font-family: "Jersey10";
 }
 
@@ -70,6 +70,12 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 36px;
+    font-family: "Jersey10";
+    text-decoration-line: underline;
+    color: #656363;
+    text-transform: capitalize;
+    background-color: #000000;
 }
 .style__btn__2{
     width: 16.5rem;
@@ -78,6 +84,12 @@ header{
     align-items: center;
     background-color: #FFFFFF;
     border-radius: 1rem;
+    font-size: 48px;
+    font-family: "Jersey10";
+    color: #000000;
+    text-transform: capitalize;
+    border: none;
+    text-decoration: none;
 }
 
 .style__btn__2:hover{
@@ -112,7 +124,6 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-self: stretch;
     background-color:#000000;
     border-top: #FFFFFF solid .5rem;
     margin: 0 10rem;
@@ -121,10 +132,8 @@ footer{
 .footer__content{
     padding: 3rem 0;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 19rem;
-    align-self: stretch;
+    justify-content: space-between;
+    gap: 3rem;
 }
 
 .footer__right{
@@ -169,7 +178,7 @@ footer{
     border-radius: 1rem;
 }
 
-.footer__left h6{
+.footer__left span{
     margin-left: 4rem;
     display: flex;
     flex-direction: column;
@@ -324,22 +333,29 @@ footer{
     justify-content: center;
     border-bottom: #FFFFFF solid 0.5rem;
     border-top: #FFFFFF solid 0.5rem;
-    margin: 0 10rem;
-    max-width: 74%;
+    width: 74%;
+    padding: 2rem 0;
+    margin: 0;
 }
 
 .sabonner a{
     display: flex;
-    width: 58rem;
+    font-family: "Jersey10";
+    font-size: 3rem;
     justify-content: center;
     align-items: center;
     background-color: #fff;
     color: #000000;
-    margin: 1.5rem 4.5rem;
     border-radius: 1rem;
+    padding: 0 1.5rem;
+    margin: 0;
 }
 
 /* partie event */
+
+.capphone{
+    display: none;
+}
 
 .event{
     margin: 3rem 10rem;
@@ -372,9 +388,192 @@ footer{
     padding:  0 1.5rem;
     border-radius: 1rem;
     color: #000000;
+    font-family: 'Jersey10';
+    font-size: 3rem;
 }
 
-/* partie responsive */
+/* FIN PAGE INDEX */
+
+/* PAGE COMMU */
+
+/* parite main */
+
+.community__contenu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.community__contenu h1{
+    margin: 3rem 0;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.img__commu{
+    overflow: hidden;
+    position: relative;
+    aspect-ratio: 7;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img__commu img {
+    width: 73%;
+    height: auto;
+    object-fit: cover;
+}
+
+.commu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.commu__div{
+    margin-top: 1.5rem;
+    display: grid;
+    grid-template-columns: 6.5fr 35fr 6.5fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-bottom: 1.5rem;
+}
+
+.commu__card{
+    display: flex;
+    gap: 1.25rem;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.commu__img{
+    max-width: 50rem;
+    aspect-ratio: 1.1;
+    overflow: hidden;
+    position: relative;
+}
+
+.commu__img img {
+    max-width: 100%;
+    position: relative;
+}
+
+.commu__contenu{
+    margin-top: 1.5rem;
+    display: flex;
+    max-width: 50rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+.commu__contenu h3{
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.commu__contenu p{
+    text-align: center;
+    font-size: 18px;
+    line-height: 30px;
+    padding: 0 3rem;
+    margin-bottom: 3rem;
+}
+
+.btn__5{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 1rem;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 6.25rem;
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 0;
+    color: #000000;
+    font-family: 'Jersey10';
+}
+
+.than{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.than svg {
+    max-width: 2.5rem;
+    fill: #ffffff;
+}
+
+/* Éphémères */
+
+.twitch,
+.youtube {
+     display: none;
+}
+
+/* partie réseaux */
+
+.community__réseaux{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.community__réseaux h2 {
+    font-size: 3rem;
+    margin-bottom: 3rem;
+    text-transform: capitalize; 
+}
+
+.little__svg{
+    width: 3rem;
+}
+
+.svg__link {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.5rem;
+    border-radius: 100%;
+    aspect-ratio: 1;
+    padding: .5rem;
+}
+
+.commu__réseaux__contenu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 30rem;
+    grid-row-gap: 0px;
+    }
+
+.réseaux__mos h3,
+.réseaux__tho h3 {
+    background-color: #fff;
+    color: #000000;
+    padding: 0 4.5rem;
+    margin-bottom: 1.5rem;
+    border-radius: 1rem;
+}
+
+.réseaux__mos,
+.réseaux__tho {
+    display: flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* RESPONSIVE */
 
 @media screen and (max-width:768px){
     .burger{
@@ -461,9 +660,12 @@ footer{
         font-size: 24px;
         margin-bottom: 1.5rem;
     }
-
+    .vidéo__content a{
+        max-width: 30rem;
+    }
+    
     .vidéo__content a img{
-        max-width: 28rem;
+        max-width: 100%;
         margin-bottom: 1.5rem;
     }
 
@@ -474,214 +676,87 @@ footer{
     /* partie s'abonner */
 
     .sabonner{
-        display: flex;
-        justify-content: center;
-        border-bottom: #FFFFFF solid 0.5rem;
-        border-top: #FFFFFF solid 0.5rem;
         width: 100%;
-        padding: 2rem;
-        margin: 0;
     }
 
-    .sabonner a{
+    /* partie event */
+
+    .capphone{
         display: flex;
-        width: 15rem;
-        justify-content: center;
-        align-items: center;
-        background-color: #fff;
-        color: #000000;
-        border-radius: 1rem;
-        margin: 0;
     }
 
-    /* Éphémère */
-
-    .event,
-    footer{
+    .capdesk{
         display: none;
     }
 
-}
-
-
-/* FIN PAGE INDEX */
-
-/* PAGE COMMU */
-
-/* parite main */
-
-.community__contenu{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.community__contenu h1{
-    margin: 3rem 0;
-    text-transform: capitalize;
-}
-
-.img__commu{
-    overflow: hidden;
-    position: relative;
-    aspect-ratio: 7;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.img__commu img {
-    width: 73%;
-    height: auto;
-    object-fit: cover;
-}
-
-.commu{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.commu__div{
-    margin-top: 1.5rem;
-    display: grid;
-    grid-template-columns: 6.5fr 35fr 6.5fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    margin-bottom: 1.5rem;
-}
-
-.commu__card{
-    display: flex;
-    gap: 1.25rem;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.commu__img{
-    max-width: 50rem;
-    aspect-ratio: 1.1;
-    overflow: hidden;
-    position: relative;
-}
-
-.commu__img img {
-    max-width: 100%;
-    position: relative;
-}
-
-.commu__contenu{
-    margin-top: 1.5rem;
-    display: flex;
-    max-width: 50rem;
-    flex-direction: column;
-    align-items: center;
-}
-
-.commu__contenu h3{
-    text-transform: capitalize;
-    text-align: center;
-    margin-bottom: 3rem;
-}
-
-.commu__contenu p{
-    text-align: center;
-    font-size: 18px;
-    line-height: 30px;
-    padding: 0 3rem;
-    margin-bottom: 3rem;
-}
-
-.btn__5 h3{
-    text-align: center;
-    text-transform: capitalize;
-    font-size: 6.25rem;
-    padding: 1rem 1rem 1rem 1rem;
-    margin: 0;
-    color: #000000;
-}
-
-.btn__5{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 1rem;
-}
-
-.than{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.than svg {
-    max-width: 2.5rem;
-    fill: #ffffff;
-}
-
-/* Éphémères */
-
-.twitch,
-.youtube {
-     display: none;
-}
-
-/* partie réseaux */
-
-.community__réseaux{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.community__réseaux h2 {
-    font-size: 3rem;
-    margin-bottom: 3rem;
-    text-transform: capitalize; 
-}
-
-.little__svg{
-    width: 3rem;
-}
-
-.svg__link {
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1.5rem;
-    border-radius: 100%;
-    aspect-ratio: 1;
-    padding: .5rem;
-}
-
-.commu__réseaux__contenu {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 30rem;
-    grid-row-gap: 0px;
+    .event{
+        margin: 0 0 3rem;
     }
 
-.réseaux__mos h3,
-.réseaux__tho h3 {
-    background-color: #fff;
-    color: #000000;
-    padding: 0 4.5rem;
-    margin-bottom: 1.5rem;
-    border-radius: 1rem;
-}
+    .event__title{
+        margin-top: 24px ;
+        font-size: 36px;
+    }
+    
+    .event p{
+        font-size: 14px;
+    }
 
-.réseaux__mos,
-.réseaux__tho {
-    display: flex ;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* partie footer */
+
+    footer{
+        margin: 0;
+        width: 74%;
+    }
+    
+    .footer__content{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .footer__left span,.btn__3,.btn__4{
+        font-size: 18px;
+    }
+
+    .footer__left{
+        width: 23rem;
+    }
+
+    .btn__3,.btn__4{
+        width: 10rem;
+    }
+    
+    /* PAGE COMMU */
+    .twitch,.youtube{
+        display: flex;
+    }
+
+    .commu__div{
+        display: flex;
+    }
+
+    .than {
+        display: none;
+    }
+
+    .btn__5{
+        max-width: 100%;
+        font-size: 36px;
+    }
+
+    .community__contenu h1{
+        text-align: center;
+    }
+
+    .commu__img{
+        display: none;
+
+    }
+
+    .community__réseaux{
+        
+    }
+    .commu__réseaux__contenu{
+        gap: 4rem;
+    }
 }
