--- a/css/style.css
+++ b/css/style.css
@@ -619,23 +619,35 @@ footer{
 @media screen and (max-width:900px){
     body{
         z-index: 0;
+        overflow-x: hidden;
     }
 
     .burger{
+        z-index: 10;
         display:block;
         color: #FFFFFF;
     }
     .burgerdiv{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         position: absolute;
-        background-color: #656363;
-        z-index: 90000000;
-        width: 0%;
-        height: auto;
-        top: 100%;
+        background-color: #000000;
+        z-index: 9;
+        width: 100%;
+        height: 100%;
+        top: 119px;
         left: 110%;
-        overflow-y: auto;
         opacity: 0;
+        transition: all .75s;
+        overflow-y: hidden;
+    }
+
+    .burgeranim .burgerdiv{
+        width: 100%;
+        transform: translateX(-110%);
+        transition: all 1s;
+        opacity: 1;
     }
 
     .style__btn__3{
