--- a/css/style.css
+++ b/css/style.css
@@ -636,10 +636,13 @@ footer{
         z-index: 9;
         width: 100%;
         height: 100%;
-        top: 119px;
+        top: 110px;
         left: 110%;
         opacity: 0;
         transition: all .75s;
+        overflow-y: hidden;
+        gap: 50px;
+        padding-top: 25px;
         overflow-y: hidden;
     }
 
@@ -651,7 +654,7 @@ footer{
     }
 
     .style__btn__3{
-    width: 16.5rem;
+    width: 18rem;
     display: flex;
     justify-content: center;
     align-items: center;
