--- a/css/style.css
+++ b/css/style.css
@@ -636,11 +636,13 @@ footer{
         z-index: 9;
         width: 100%;
         height: 100%;
-        top: 119px;
+        top: 110px;
         left: 110%;
         opacity: 0;
         transition: all .75s;
         overflow-y: hidden;
+        gap: 30px;
+        padding-top: 30px;
     }
 
     .burgeranim .burgerdiv{
