--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
     font-style: normal;
 }
 
+html, body {
+    overflow-x: hidden ;
+    max-width: 100vw;
+}
+
 body{
     background-color: #000000;
     color: #FFFFFF;
@@ -21,7 +26,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
 }
 
 body.no__scroll {
@@ -652,11 +656,11 @@ footer{
         position: absolute;
         background-color: #000000;
         z-index: 9;
-        width: 100%;
+        width: 0%;
         height: 100vh;
         top: 100px;
         left: 110%;
-        opacity: 0;
+        opacity: 1;
         transition: all .75s;
         overflow-y: auto;
         gap: 60px;
