--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,12 @@ footer{
     flex-direction: column;
 }
 
+/* page histoire */
+
+.test{
+    display: flex;
+}
+
 /* RESPONSIVE */
 
 
@@ -656,18 +662,6 @@ footer{
         position: absolute;
         background-color: #000000;
         z-index: 9;
-<<<<<<< HEAD
-        width: 100%;
-        height: 100%;
-        top: 110px;
-        left: 110%;
-        opacity: 0;
-        transition: all .75s;
-        overflow-y: hidden;
-        gap: 50px;
-        padding-top: 25px;
-        overflow-y: hidden;
-=======
         width: 0%;
         height: 100vh;
         top: 100px;
@@ -677,7 +671,6 @@ footer{
         overflow-y: auto;
         gap: 60px;
         padding-top: 80px;
->>>>>>> 556443d9e7a235fafbafebd141ba19cd335505cb
     }
 
     .burgeranim .burgerdiv{
@@ -697,21 +690,6 @@ footer{
     }
 
     .style__btn__3{
-<<<<<<< HEAD
-    width: 18rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF;
-    border-radius: 1rem;
-    font-size: 48px;
-    font-family: "Jersey10";
-    color: #000000;
-    text-transform: capitalize;
-    border: none;
-    text-decoration: none;
-}
-=======
         width: 16.5rem;
         display: flex;
         justify-content: center;
@@ -730,7 +708,6 @@ footer{
         width: 2.5rem;
     }
 
->>>>>>> 556443d9e7a235fafbafebd141ba19cd335505cb
     .style__btn__1,
     .style__btn__2{
         display: none;
