--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ p{
 /* partie header */
 
 header{
+    width: 100vw;
+}
+
+nav{
+    max-width: 100vw;
     display: flex;
     padding: 1.25rem;
     align-items: center;
@@ -114,13 +119,12 @@ header{
 }
 
 .logo{
-    display: flex;
     max-width: 15rem;
     align-items: center;
 }
 .style__btn__2{
     width: 16.5rem;
-    display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
@@ -164,6 +168,7 @@ footer{
     padding: 3rem 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 3rem;
 }
 
@@ -207,6 +212,7 @@ footer{
     flex-direction: column;
     color: #000000; 
     border-radius: 1rem;
+    padding: 0.5rem 0;
 }
 
 .footer__left span{
@@ -731,14 +737,36 @@ footer{
     footer {
         margin: 0;
     }
-    .footer__content{
-        flex-direction: column;
-    }
     .video__content{
         padding: 0;
     }
     .commu__réseaux__contenu{
         gap: 10rem
+    }
+}
+
+@media screen and (max-width:1110px){
+    footer{
+        margin: 0;
+        width: 74%;
+    }
+    
+    .footer__content{
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+    }
+    
+    .footer__left span,.btn__3,.btn__4{
+        font-size: 20px;
+    }
+
+    .footer__left{
+        width: 23rem;
+    }
+
+    .btn__3,.btn__4{
+        width: 10rem;
     }
 }
 
@@ -808,7 +836,6 @@ footer{
     }
     .arbre__orange,
     .arbre__violet,
-    .banner__bot,
     .hero__content img{
         display: none;
     }
@@ -826,17 +853,16 @@ footer{
         padding: 3rem 1rem 0;
     }
 
-    .banner__top{
+    .banner__top,.banner__bot{
         position: relative;
         justify-content: center;
         align-items: center;
         max-width: 200%;
     }
 
-    header{
+    nav{
         display: flex;
         justify-content: space-between;
-        margin: 0;
         padding: 1.5rem 1.5rem 0 1.5rem;
         gap: 0;
     }
@@ -922,6 +948,7 @@ footer{
     .footer__content{
         display: flex;
         flex-direction: column;
+        align-items: baseline;
     }
     
     .footer__left span,.btn__3,.btn__4{
